<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="145dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:clickable="true"
    android:elevation="2dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/is_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_done"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:adjustViewBounds="true"
                android:background="@drawable/checked_done"
                android:scaleType="center" />

            <TextView
                android:id="@+id/text_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:text="@string/done" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/header"
            android:background="@color/card_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="4dp"
            android:paddingStart="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/level"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:background="@drawable/important"
                android:scaleType="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="Title"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/date_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2017/12/25 12.56" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:lines="3"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_below="@id/header"
            android:padding="5dp"
            android:text="Text description appear here to describe note\nText description appear here to describe note\nText description appear here to describe note\n"
            android:textSize="15sp" />

        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/edit"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</android.support.v7.widget.CardView>