<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coord"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            app:titleTextColor="@android:color/white"
            android:theme="@style/CustomActionBarTheme"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="26dp"
        android:src="@drawable/add"
        android:padding="16dp"
        android:scaleType="fitXY"
        app:backgroundTint="@color/colorPrimary"
        app:rippleColor="@color/colorPrimaryDark"
        app:layout_anchor="@id/recycler"
        app:layout_anchorGravity="bottom|end"
        android:clickable="true" />
</android.support.design.widget.CoordinatorLayout>
