...
    <string name="menu_tuto">Toutes les tâches sont affichés ici. Pour supprimer une tâche, rester longuement appuyé sur celle que vous voulez supprimer, vous pourrez annuler l\'opération dans les secondes qui suivent !</string>
    <string name="edit_tuto_title">Modifier une tâche</string>
    <string name="edit_tuto">Vous pouvez modifier les informations de la tâche, changer l\'heure de rappel et modifier l\'image de représentation !</string>
    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="cancel">Annuler</string>
    <string name="ok">OK</string>
    <string name="view">Voir</string>
    <string name="error_fields">Veuillez remplir les champs ci-dessus</string>
    <string name="error_date">Impossible d\'entrez une date inférieur à aujourd\'hui</string>
    <string name="delete_item_question">Voulez vous supprimer cette note ?</string>
    <string name="delete_item_title">Supprimer une note</string>
    <string name="yes">Oui</string>
...
