<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scaleType="centerCrop"
        android:background="@android:color/black"
        android:elevation="5dp"
        android:src="@drawable/banner_dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:maxLength="24" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:entries="@array/level_array" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start|left"
                    android:hint="@string/description"
                    android:lines="3"
                    android:maxLines="3" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/date_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:focusable="false"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:hint="@string/date" />

                <EditText
                    android:id="@+id/time_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:layout_marginStart="1dp"
                    android:layout_weight="1"
                    android:hint="@string/time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/image_check"
                    android:layout_width="match_parent"
                    android:text="@string/banner"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/preview"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:gravity="end"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:layout_marginBottom="5dp"
        android:paddingEnd="5dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/ok"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>